Update tex and bib tex

--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -148,3 +148,35 @@
 	author = {Fall, Kevin and Varadhan, Kannan},
 	year = {2007}
 }
+
+@article{shaio_reinforcement_2005,
+	title = {A reinforcement learning approach to congestion control of high-speed multimedia networks},
+	volume = {36},
+	number = {2},
+	journal = {Cybernetics and Systems: An International Journal},
+	author = {Shaio, Ming-Chang and Tan, Shun-Wen and Hwang, Kao-Shing and Wu, Cheng-Shong},
+	year = {2005},
+	pages = {181--202}
+}
+
+@article{cho_learning_2014,
+	title = {Learning phrase representations using {RNN} encoder-decoder for statistical machine translation},
+	journal = {arXiv preprint arXiv:1406.1078},
+	author = {Cho, Kyunghyun and Van Merriënboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
+	year = {2014}
+}
+
+@article{gers_learning_1999,
+	title = {Learning to forget: {Continual} prediction with {LSTM}},
+	author = {Gers, Felix A and Schmidhuber, Jürgen and Cummins, Fred},
+	year = {1999}
+}
+
+@inproceedings{oura_fairness_2012,
+	title = {Fairness comparisons among modern {TCP} implementations},
+	booktitle = {Advanced {Information} {Networking} and {Applications} {Workshops} ({WAINA}), 2012 26th {International} {Conference} on},
+	publisher = {IEEE},
+	author = {Oura, Ryo and Yamaguchi, Saneyasu},
+	year = {2012},
+	pages = {909--914}
+}
